--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,3 +57,14 @@ footer {
     font-size: 14px;
 }
 
+.courses {
+    margin-top: 20px;
+}
+
+@media screen and (min-width:600px){
+    .courses {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 10px;
+    }
+}
