--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -19,7 +19,9 @@ header {
 .links {
     list-style-type: none;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    align-items:center;
+    flex-direction: column; 
     background-color: #a6cad4;
     font-family: 'Montserrat', sans-serif;
 }
@@ -68,10 +70,18 @@ footer {
         grid-template-columns: 1fr 2fr;
         column-gap: 10px;
     }
+    
+    .links {
+        flex-direction: row;
+        justify-content: center;
+    }
+    /* .links {
+        flex-direction: column;
+    } */
 }
 
-@media screen and (max-width:600px){
+/* @media screen and (max-width:600px){
     .links {
         flex-direction: column;
     }
-}
+} */
